🐛 FIX: Adjust browse products button on mobile (#1328)

--- a/assets/css/sass/utils/_variables.scss
+++ b/assets/css/sass/utils/_variables.scss
@@ -20,6 +20,7 @@ $info:              #3d9cd2;
 
 // layout sizes
 $desktop:           768px;
+$handheld-max:      767px;
 $handheld:          568px;
 $container-width:   ms(18);
 
